[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "builder"
version = "0.1.0"
description = "Deployment utility for embedded Linux projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "pyyaml-include>=2.0",
    "pydantic>=2.0",
    "docker>=7.0.0",
    "jinja2>=3.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
    "expandvars>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "types-pyyaml",
]

[project.scripts]
builder = "builder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/builder"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=builder"
